[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pyright]
#python = "/home/gk/miniconda/envs/tools/bin/python"
##venvPath = "/home/gk/repos/terminal_markdown_viewer"
##venv = ".venv"
##extraPaths = ["/home/gk/miniconda3/envs/tools/lib/python3.8/site-packages"]
#verboseOutput = true
include = ["src", "tests"]
# pythonVersion = "3.8"
pythonPlatform = "Linux"
executionEnvironments = [{ root = "src" }, {root="tests"}]

[tool.poetry]
name = "mdv"
version = "2021.7.31.pre"
description = "Terminal Markdown Viewer"
authors = ["Gunther Klessinger <gk@axiros.de>"]
license = "BSD 2-Clause Simplified License"
readme = "README.md"
repository = "https://github.com/AXGKl/terminal_markdown_viewer"
homepage = "https://github.com/AXGKl/terminal_markdown_viewer"
keywords = []
packages = [ { include = "mdv", from = "src" } ]
include = [
    "README.md",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = "^3.7"
markdown = "*"
pygments = "*"
beautifulsoup4 = "^4.9.3"
cssutils = "^2.3.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
# one of last versions with site-packages/black.py - overridden by axblack:
#black = "18.6b4"
# comes with the whole mkdocs suite:
#docutools = "^2021.12.16"
structlog = "*"

[tool.poetry.scripts]
mdv = "mdv.v1:run"
mdv2 = "mdv.cli:main"

[tool.ruff]
line-length = 90
extend-select = ["Q"]
select = ["E", "F", "B"] # Enable flake8-bugbear (`B`) rules.
ignore = ["E501"] # Never enforce `E501` (line length violations).
unfixable = ["B"] # Avoid trying to fix flake8-bugbear (`B`) violations.
# [per-file-ignores] # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
# "__init__.py" = ["E402"]
# "path/to/file.py" = ["E402"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.format]
# Prefer single quotes over double quotes
quote-style = "single"



